--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "node-api",
   "main": "server.js",
   "dependencies": {
+    "twitter": "~0.2.13",
     "express": "~4.0.0",
     "mongoose": "~3.6.13",
     "body-parser": "~1.0.1"
