--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express": "~4.0.0",
     "mongoose": "~3.6.13",
     "body-parser": "~1.0.1",
-    "instagram-node": "~0.5.1"
+    "instagram-node": "~0.5.1",
+    "mongodb": "~1.4.22"
   }
 }
