--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "node-api",
   "main": "server.js",
   "dependencies": {
-    "twitter": "~0.2.13",
-    "express": "~4.0.0",
-    "mongoose": "~3.6.13",
     "body-parser": "~1.0.1",
+    "express": "~4.0.0",
     "instagram-node": "~0.5.1",
-    "mongodb": "~1.4.22"
+    "mongoose": "~3.6.13",
+    "mongodb": "~1.4.22",
+    "socket.io": "^1.2.1",
+    "twitter": "~0.2.13"
   }
 }
