--- a/package.json
+++ b/package.json
@@ -5,9 +5,20 @@
     "body-parser": "~1.0.1",
     "express": "~4.0.0",
     "instagram-node": "~0.5.1",
-    "mongoose": "~3.6.13",
     "mongodb": "~1.4.22",
+    "mongoose": "~3.6.13",
+    "nodemon": "^1.2.1",
     "socket.io": "^1.2.1",
     "twitter": "~0.2.13"
+  },
+  "devDependencies": {
+    "chai": "^1.10.0",
+    "hippie": "^0.3.0",
+    "mocha": "^2.0.1",
+    "should": "^4.3.0",
+    "sinon": "^1.12.1"
+  },
+  "scripts": {
+    "test": "mocha test"
   }
 }
