--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "sinon": "^1.12.1"
   },
   "scripts": {
-    "test": "mocha test"
+    "test": "mocha test",
+    "mongoskin": "1.4.4",
+
   }
 }
