--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "instagram-node": "~0.5.1",
     "mongodb": "~1.4.22",
     "mongoose": "~3.6.13",
+    "mongoskin": "^1.4.4",
     "nodemon": "^1.2.1",
     "socket.io": "^1.2.1",
     "twitter": "~0.2.13"
