--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "main": "server.js",
   "dependencies": {
     "body-parser": "~1.0.1",
-    "express": "~4.0.0",
+    "express": "^4.10.2",
     "instagram-node": "~0.5.1",
     "mongodb": "~1.4.22",
     "mongoose": "~3.6.13",
